--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 /project-2-crud-applicatie-buurman-buurman-webshop
+/Jarvis-Gehacked-7bda73d2-1c12afdc
+/No-More-Errors-dfa91e356c5a-6b3d09ca8f89
+/OK-Computer-501315b3809b-b3d6d0fc7118
+/Steen-Papier-Schaar-c95398d09a18-6687b33ac8da
+/Youre-in-or-youre-out-d917005d27e1-9830d4ce5ffb
